cloudformation.json
{
   "AWSTemplateFormatVersion": "2010-09-09",
   "Parameters": {
       "EnvironmentName": {
           "Description": "This is a prefixed to resource names",
           "Type": "String",
           "Default": "DeployKubernetes"
       },
       "VpcCIDER": {
           "Type": "String",
           "Default": "10.0.0.0/16"
       },
       "PublicSubnet1CIDER": {
           "Type": "String",
           "Default": "10.0.0.0/24"
       }
       
   },
   "Resources": {
       "UdacityVPC": {
           "Type": "AWS::EC2::VPC",
           "Properties": {
               "CidrBlock": {
                   "Ref": "VpcCIDER"
               },
               "EnableDnsHostnames": true,
               "Tags": [
                   {
                       "Key": "Name",
                       "Value": {
                           "Ref": "EnvironmentName"
                       }
                   }
               ]
           }
       },
       "UdacityIGW": {
           "Type": "AWS::EC2::InternetGateway",
           "Properties": {
               "Tags": [
                   {
                       "Key": "Name",
                       "Value": {
                           "Ref": "EnvironmentName"
                       }
                   }
               ]
           }
       },
       "VpcIGWAttachment": {
           "Type": "AWS::EC2::VPCGatewayAttachment",
           "Properties": {
               "InternetGatewayId": {
                   "Ref": "UdacityIGW"
               },
               "VpcId": {
                   "Ref": "UdacityVPC"
               }
           }
       },
       "ProfileWithRolesForOurApp": {
           "Type": "AWS::IAM::InstanceProfile",
           "Properties": {
               "Roles": [
                   "UdacityS3ReadOnlyEC2"
               ]
           }
       },
   
       "PublicSecurityGroup": {
           "Type": "AWS::EC2::SecurityGroup",
           "Properties": {
               "VpcId": {
                   "Ref": "UdacityVPC"
               },
               "GroupDescription": "PublicSecurityGroup",
               "SecurityGroupIngress": [
                   {
                       "IpProtocol": "tcp",
                       "FromPort": 22,
                       "ToPort": 22,
                       "CidrIp": "0.0.0.0/0"
                   },
                   {
                     "IpProtocol": "tcp",
                     "FromPort": 80,
                     "ToPort": 80,
                     "CidrIp": "0.0.0.0/0"
                 }
               ],
               "SecurityGroupEgress": [
                   {
                       "IpProtocol": "tcp",
                       "FromPort": 0,
                       "ToPort": 65535,
                       "CidrIp": "0.0.0.0/0"
                   }
               ],
               "Tags": [
                   {
                       "Key": "Name",
                       "Value": {
                           "Fn::Sub": "${EnvironmentName} Public Security Group"
                       }
                   }
               ]
           }
       },
       "PublicSubnet1": {
           "Type": "AWS::EC2::Subnet",
           "Properties": {
               "AvailabilityZone": {
                   "Fn::Select": [
                       "0",
                       {
                           "Fn::GetAZs": {
                               "Ref": "AWS::Region"
                           }
                       }
                   ]
               },
               "CidrBlock": {
                   "Ref": "PublicSubnet1CIDER"
               },
               "VpcId": {
                   "Ref": "UdacityVPC"
               },
               "Tags": [
                   {
                       "Key": "Name",
                       "Value": {
                           "Fn::Sub": "${EnvironmentName} Public Subnet 1 (AZ1)"
                       }
                   }
               ]
           }
       },
       "AutoScalingGroup1": {
         "Type": "AWS::AutoScaling::AutoScalingGroup",
         "Properties": {
             "MinSize": 1,
             "MaxSize": 1,
             "TargetGroupARNs": [
                 {
                     "Ref": "KubernetesServer"
                 }
             ],
             "VPCZoneIdentifier": [
                 {
                     "Ref": "PublicSubnet1"
                 }
             ],
             "LaunchConfigurationName": {
                 "Ref": "AutoScalingLuanchConfigInstance"
             },
             "Tags": [
                 {
                     "Key": "Name",
                     "Value": {
                         "Fn::Sub": "${EnvironmentName} AutoScaling Group 1 (AZ1)"
                     },
                     "PropagateAtLaunch": "true"
                 }
             ]
         }
     },
       "AutoScalingLuanchConfigInstance": {
         "Type": "AWS::AutoScaling::LaunchConfiguration",
         "Properties": {
             "SecurityGroups": [
                 {
                     "Ref": "PrvSubnet1SecurityGroup"
                 }
             ],
             "IamInstanceProfile": {
                 "Ref": "ProfileWithRolesForOurApp"
             },
             "UserData": {
                 "Fn::Base64": {
                     "Fn::Sub": "#!/bin/bash\napt-get update -y\napt-get install unzip awscli -y\napt-get install apache2 -y\nsystemctl start apache2.service\ncd /var/www/html\naws s3 cp s3://udacity-demo-1/udacity.zip .\nunzip -o udacity.zip\n"
                 }
             },
             "BlockDeviceMappings": [
                 {
                     "DeviceName": "/dev/sdk",
                     "Ebs": {
                         "VolumeSize": "10"
                     }
                 }
             ],
             "InstanceType": "t2.micro",
             "ImageId": "ami-0d1cd67c26f5fca19"
         }
     },

       "KubernetesServer": {
           "Type": "AWS::EC2::Instance",
           "Properties": {
               "InstanceType": "t2.micro",
               "ImageId": "ami-0d1cd67c26f5fca19",
               "UserData": {
                  "Fn::Base64": {
                      "Fn::Sub": "#!/bin/bash\napt-get update -y\napt-get install unzip awscli -y\napt-get install apache2 -y\nsystemctl start apache2.service\ncd /var/www/html\naws s3 cp s3://udacity-demo-1/udacity.zip .\nunzip -o udacity.zip\n"
                  }
              },
              "BlockDeviceMappings": [
                  {
                      "DeviceName": "/dev/sdk",
                      "Ebs": {
                          "VolumeSize": "10"
                      }
                  }
              ],
               "NetworkInterfaces": [
                   {
                       "GroupSet": [
                           {
                               "Ref": "PublicSecurityGroup"
                           }
                       ],
                       "AssociatePublicIpAddress": "true",
                       "DeviceIndex": "0",
                       "SubnetId": {
                           "Ref": "PublicSubnet1"
                       }
                   }
               ]
           }
       },
   
       "PublicRouteTable1": {
           "Type": "AWS::EC2::RouteTable",
           "Properties": {
               "VpcId": {
                   "Ref": "UdacityVPC"
               }
           }
       },
      
       "PublicRouteTable1Association": {
           "Type": "AWS::EC2::SubnetRouteTableAssociation",
           "Properties": {
               "RouteTableId": {
                   "Ref": "PublicRouteTable1"
               },
               "SubnetId": {
                   "Ref": "PublicSubnet1"
               }
           }
       },
    
      
       "PublicSubnet1Route1": {
           "Type": "AWS::EC2::Route",
           "Properties": {
               "DestinationCidrBlock": "0.0.0.0/0",
               "RouteTableId": {
                   "Ref": "PublicRouteTable1"
               },
               "GatewayId": {
                   "Ref": "UdacityIGW"
               }
           }
       }
      
   },
   "Outputs": {
       "ApplicationUrl": {
           "Description": "Kubernetes Server URL",
           "Value": {
               "Fn::Sub": "http://${KubernetesServer.DNSName}"
           }
       }
   }
}
